--- a/package.json
+++ b/package.json
@@ -1,17 +1,12 @@
 {
   "name": "resume",
   "version": "1.0.0",
-  "description": "kawamataryoの職務経歴書",
+  "description": "ryoppippiの職務経歴書",
   "scripts": {
     "lint": "textlint docs/README.md",
     "build:pdf": "md-to-pdf docs/README.md --config-file ./pdf-configs/config.js"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+ssh://git@github.com/kawamataryo/resume.git"
-  },
   "keywords": [],
-  "author": "Ryo Kawamata <ba068082@gmail.com>",
   "devDependencies": {
     "husky": "^5.0.0-alpha.6",
     "@textlint-ja/textlint-rule-no-insert-dropping-sa": "^1.0.1",
