--- a/package.json
+++ b/package.json
@@ -12,5 +12,9 @@
   },
   "dependencies": {
     "astro": "^1.6.0"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.13",
+    "postcss-preset-env": "^7.8.2"
   }
 }
