--- a/renovate.json
+++ b/renovate.json
@@ -9,6 +9,9 @@
     "renovate"
   ],
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
+  "extends": [
+    "github>Omochice/renovate-config:deno"
+  ],
   "rangeStrategy": "bump",
   "lockFileMaintenance": {
     "enabled": true
