--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -11,3 +11,17 @@ jobs:
         uses: lvignoli/typst-action@main
         with:
           source_file: ryotaro_kimura.typ
+
+      - name: copy pdf files to build dir
+        run: |
+          mkdir -p build
+          cp *.pdf build/
+
+      - name: Push
+        uses: s0/git-publish-subdir-action@develop
+        env:
+          REPO: self
+          BRANCH: typst-build
+          FOLDER: build 
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # GitHub will automatically add this - you don't need to bother getting a token
+          MESSAGE: "Build: ({sha}) {msg}" # The commit message
