--- a/typos.toml
+++ b/typos.toml
@@ -2,5 +2,7 @@
 locale = 'en-gb'
 extend-ignore-re = [
   "(?s)(#|//)\\s*spellchecker:off.*?\\n\\s*(#|//)\\s*spellchecker:on",
-  "(?Rm)^.*#\\s*spellchecker:disable-line$"
+  "(?s)<!--\\s*spellchecker:off.*?\\n\\s*spellchecker:on\\s*-->",
+  "(?Rm)^.*#\\s*spellchecker:disable-line$",
+  "(?m)^.*<!--\\s*spellchecker:disable-line\\s*-->\\n.*$"
 ]
