--- a/typst/deno.json
+++ b/typst/deno.json
@@ -2,7 +2,7 @@
   "tasks": {
     "typst": "deno run -RE --allow-run npm:typst",
     "dev": "deno task typst watch ./ryotaro_kimura.typ",
-    "compile": "deno task typst compile ./ryotaro_kimura.typ"
+    "compile": "deno task typst compile ./ryotaro_kimura.typ --font-path ./ibm-sans"
   },
   "imports": {
     "@std/assert": "jsr:@std/assert@1.0.11"
