--- a/typos.toml
+++ b/typos.toml
@@ -6,6 +6,8 @@ extend-ignore-re = [
   "(?Rm)^.*#\\s*spellchecker:disable-line$",
   "(?m)^.*<!--\\s*spellchecker:disable-line\\s*-->\\n.*$"
 ]
+[default.extend-words]
+typ = 'typ'
 [files]
 extend-exclude = [
   '*.svg',
