feat(tasks): add update-stars task to deno.json files
Add update-stars task to both root and typst deno.json

- Root task: cd typst && deno run -A update-stars.ts

- Typst task: deno run -A update-stars.ts

--- a/deno.json
+++ b/deno.json
@@ -1,6 +1,7 @@
 {
   "tasks": {
-    "build": "deno run -ERW --allow-run ./scripts/build.ts"
+    "build": "deno run -ERW --allow-run ./scripts/build.ts",
+    "update-stars": "cd typst && deno run -A update-stars.ts"
   },
   "workspace": [
     "./typst/",
