--- a/.github/workflows/update-stars.yaml
+++ b/.github/workflows/update-stars.yaml
@@ -17,15 +17,15 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # v4
+      - name: Checkout Actions Repository
+        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
         with:
           fetch-depth: 0
 
       - name: Setup Deno
-        uses: denoland/setup-deno@2df16476c6412c0b5958802b4de1e07a5873d8f9 # v2
+        uses: denoland/setup-deno@e95548e56dfa95d4e1a28d6f422fafe75c4c26fb # v2.0.3
         with:
-          deno-version: vx.x.x
+          deno-version: v2.x
 
       - name: Update star counts
         env:
