--- a/.github/workflows/update-stars.yaml
+++ b/.github/workflows/update-stars.yaml
@@ -42,5 +42,5 @@ jobs:
           git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git config --local user.name "github-actions[bot]"
           git add typst/ryotaro_kimura.typ
-          git commit -m "chore: update star counts [skip ci]" -m "Updated star counts for OSS projects"
+          git commit -m "chore: update star counts" -m "Updated star counts for OSS projects"
           git push
