feat: add Bun package.json configuration
- Add package.json with Bun scripts for build, compile, and update-stars

- Include @types/bun for TypeScript support

- Note: Typst must be installed separately as a system binary

--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "compile": "bun run typst compile ./ryotaro_kimura.typ --font-path ./ibm-sans"
   },
   "devDependencies": {
-    "@types/bun": "latest",
-    "typst": "^0.11.0"
+    "@types/bun": "latest"
   }
 }
