--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "compile": "bun run typst compile ./ryotaro_kimura.typ --font-path ./ibm-sans"
   },
   "devDependencies": {
-    "@types/bun": "latest"
+    "@types/bun": "latest",
+    "typst": "^0.10.0-8"
   }
 }
