--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,7 @@
 .LSOverride
 
 # Icon must end with two \r
-Icon
+Icon
 
 # Thumbnails
 ._*
@@ -28,4 +28,11 @@ Network Trash Folder
 Temporary Items
 .apdisk
 
-./dist
+# Build output
+dist/
+
+# Dependencies
+node_modules/
+
+# Generated PDF
+*.pdf
