--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
   "devDependencies": {
     "@types/bun": "^1.3.2",
     "typst": "^0.10.0-8"
+  },
+  "dependencies": {
+    "p-limit": "^7.2.0"
   }
 }
