--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -9,25 +9,36 @@ concurrency:
 
 jobs:
   spell-check:
-    runs-on: ubuntu-slim
+    runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@de0fac2e4500dabe0009e67214ff5f5447ce83dd # v6.0.2
+      - name: Checkout repository
+        uses: actions/checkout@de0fac2e4500dabe0009e67214ff5f5447ce83dd # v6.0.2
 
-      - uses: crate-ci/typos@master
+      - name: Setup Nix
+        uses: ./.github/actions/setup-nix
         with:
-          config: ./typos.toml
+          tools: typos
+          skip-bun-install: 'true'
 
-  secretlint:
-    runs-on: ubuntu-slim
+      - name: Run typos
+        run: typos
+
+  gitleaks:
+    runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@de0fac2e4500dabe0009e67214ff5f5447ce83dd # v6.0.2
-      - name: Set node
-        uses: actions/setup-node@6044e13b5dc448c55e2357c09f80417699197238 # v6.2.0
+      - name: Checkout repository
+        uses: actions/checkout@de0fac2e4500dabe0009e67214ff5f5447ce83dd # v6.0.2
         with:
-          node-version: lts/*
-      - name: Run secretlint
-        shell: bash
-        run: npx @secretlint/quick-start ./**/*
+          fetch-depth: 0
+
+      - name: Setup Nix
+        uses: ./.github/actions/setup-nix
+        with:
+          tools: gitleaks
+          skip-bun-install: 'true'
+
+      - name: Run Gitleaks
+        run: gitleaks detect --source . --config .gitleaks.toml
 
   flake-check:
     runs-on: ubuntu-latest
@@ -46,7 +57,7 @@ jobs:
   action-timeline:
     needs:
       - spell-check
-      - secretlint
+      - gitleaks
       - flake-check
     if: ${{ always() }}
     runs-on: ubuntu-slim
