chore(renovate): enable nix flake updates

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -5,6 +5,9 @@
     "schedule:weekly",
     "group:allNonMajor"
   ],
+  "nix": {
+    "enabled": true
+  },
   "postUpdateOptions": [],
   "vulnerabilityAlerts": {
     "labels": [
