Revert "refactor(ci): use nix shebang for scripts instead of setup actions"
This reverts commit c4b589f28db51b13d275b2988ef63f9a753bf727.

--- a/.github/workflows/update-stars.yaml
+++ b/.github/workflows/update-stars.yaml
@@ -21,11 +21,13 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Setup Nix
-        uses: ./.github/actions/setup-nix
+      - uses: oven-sh/setup-bun@3d267786b128fe76c2f16a390aa2448b815359f3 # v2.1.2
+        with:
+          bun-version: latest
 
       - name: Update star counts
-        run: ./scripts/update-stars.ts
+        run: |
+          bun run update-stars
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
