--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -24,6 +24,7 @@ jobs:
 
   deploy:
     runs-on: ubuntu-latest
+    needs: ci
     if: github.ref == 'refs/heads/main' && github.event_name == 'push'
     permissions:
       contents: read
@@ -49,6 +50,7 @@ jobs:
 
   preview:
     runs-on: ubuntu-latest
+    needs: ci
     if: github.event_name == 'pull_request'
     permissions:
       contents: read
