refactor: migrate to fully Nix-native build system
- Replace bun/npm dependencies with pure Nix build
- Remove local IBM Plex Sans fonts (now from nixpkgs)
- Remove package.json, bun.lock, and build.ts script
- Add wrangler flake input from emrldnix/wrangler
- Generate _redirects from redirects.toml via Nix function
- Use nix shebang for update-stars.ts script
- Add nix-community/cache-nix-action for CI caching
- Update GitHub Actions to use Nix directly
- Remove custom setup-nix action (no longer needed)
- Add CLAUDE.md with project documentation

Build output is now in result/ via `nix build`.
Deploy via `nix run .#deploy` and preview via `nix run .#preview`.

--- a/.github/workflows/update-stars.yaml
+++ b/.github/workflows/update-stars.yaml
@@ -21,14 +21,13 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Setup Nix
-        uses: ./.github/actions/setup-nix
+      - name: Install Nix
+        uses: cachix/install-nix-action@4e002c8ec80594ecd40e759629461e26c8abed15 # v31.9.0
         with:
-          tools: 'bun'
-          skip-bun-install: 'true'
+          github_access_token: ${{ github.token }}
 
       - name: Update star counts
-        run: bun run update-stars
+        run: ./scripts/update-stars.ts
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
