--- a/typos.toml
+++ b/typos.toml
@@ -9,6 +9,7 @@ extend-ignore-re = [
 [default.extend-words]
 typ = 'typ'
 Realized = 'Realized'
+substituters = 'substituters'
 
 [files]
 extend-exclude = [
