--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -93,13 +93,15 @@ jobs:
         with:
           script: |
             const output = `${{ steps.deploy.outputs.output }}`;
-            const versionMatch = output.match(/Version ID:\s*([a-f0-9-]+)/i);
+            const versionMatch = output.match(/Worker Version ID:\s*([a-f0-9-]+)/i);
+            const urlMatch = output.match(/Version Preview URL:\s*(https:\/\/[^\s]+)/i);
             const versionId = versionMatch ? versionMatch[1] : null;
+            const previewUrl = urlMatch ? urlMatch[1] : null;
 
             let body = '## 🚀 Preview Deployment\n\n';
-            if (versionId) {
+            if (versionId && previewUrl) {
               body += `**Version ID:** \`${versionId}\`\n\n`;
-              body += `Preview this version at: https://${versionId}.cv.workers.dev`;
+              body += `Preview this version at: ${previewUrl}`;
             } else {
               body += '```\n' + output + '\n```';
             }
