refactor: generate wrangler config from flake.nix and consolidate CI
- Define wrangler configuration as Nix attrset, generate wrangler.json
  during build
- Copy assets to temp directory before wrangler deploy (Nix store is
  read-only)
- Extract deploy workflow as reusable workflow (workflow_call)
- CI and update-stars workflows now share deploy.yaml with secrets:
  inherit
- Remove push trigger from update-stars (CI handles push deploys)

--- a/.github/workflows/update-stars.yaml
+++ b/.github/workflows/update-stars.yaml
@@ -1,9 +1,6 @@
 name: Update Star Counts
 
 on:
-  push:
-    branches:
-      - main
   workflow_dispatch:
   schedule:
     # Run daily at 00:00 UTC
@@ -11,6 +8,7 @@ on:
 
 permissions:
   contents: write
+  deployments: write
 
 jobs:
   update-stars:
@@ -44,3 +42,9 @@ jobs:
           git add ryotaro_kimura.typ
           git commit -m "chore: update star counts" -m "Updated star counts for OSS projects"
           git push
+
+  deploy:
+    needs: update-stars
+    if: github.event_name == 'schedule' || github.event_name == 'workflow_dispatch'
+    uses: ./.github/workflows/deploy.yaml
+    secrets: inherit
