--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -23,34 +23,10 @@ jobs:
         run: nix flake check --accept-flake-config --show-trace
 
   deploy:
-    runs-on: ubuntu-latest
     needs: ci
     if: github.ref == 'refs/heads/main' && github.event_name == 'push'
-    permissions:
-      contents: read
-      deployments: write
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@de0fac2e4500dabe0009e67214ff5f5447ce83dd # v6.0.2
-
-      - name: Install Nix
-        uses: cachix/install-nix-action@4e002c8ec80594ecd40e759629461e26c8abed15 # v31.9.0
-        with:
-          github_access_token: ${{ github.token }}
-
-      - name: Update star counts
-        run: ./scripts/update-stars.ts
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Build
-        run: nix build --accept-flake-config
-
-      - name: Deploy to Cloudflare Workers
-        run: nix run --accept-flake-config .#deploy
-        env:
-          CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
-          CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
+    uses: ./.github/workflows/deploy.yaml
+    secrets: inherit
 
   preview:
     runs-on: ubuntu-latest
