--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -49,8 +49,13 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Build
-        run: nix build --accept-flake-config
+      - name: Extract text from PDF (ATS check)
+        id: pdftext
+        run: |
+          text=$(nix run --accept-flake-config .#pdftext)
+          echo "text<<EOF" >> $GITHUB_OUTPUT
+          echo "$text" >> $GITHUB_OUTPUT
+          echo "EOF" >> $GITHUB_OUTPUT
 
       - name: Deploy preview to Cloudflare Workers
         id: deploy
@@ -69,6 +74,7 @@ jobs:
         with:
           script: |
             const output = `${{ steps.deploy.outputs.output }}`;
+            const pdfText = `${{ steps.pdftext.outputs.text }}`;
             const versionMatch = output.match(/Worker Version ID:\s*([a-f0-9-]+)/i);
             const urlMatch = output.match(/Version Preview URL:\s*(https:\/\/[^\s]+)/i);
             const versionId = versionMatch ? versionMatch[1] : null;
@@ -77,10 +83,14 @@ jobs:
             let body = '## 🚀 Preview Deployment\n\n';
             if (versionId && previewUrl) {
               body += `**Version ID:** \`${versionId}\`\n\n`;
-              body += `Preview this version at: ${previewUrl}`;
+              body += `Preview this version at: ${previewUrl}\n\n`;
             } else {
-              body += '```\n' + output + '\n```';
+              body += '```\n' + output + '\n```\n\n';
             }
+
+            body += '<details>\n<summary>📄 Extracted PDF Text (ATS Check)</summary>\n\n';
+            body += '```\n' + pdfText + '\n```\n';
+            body += '</details>';
 
             const { data: comments } = await github.rest.issues.listComments({
               owner: context.repo.owner,
